--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterAuthorizationFormComponent.razor
@@ -63,7 +63,7 @@
 
                 @if (ReadingsLoading)
                 {
-                    <MudText>Your @MeterType meter data is now being processed</MudText>
+                    <MudText Color="Color.Success"> - Your @MeterType meter data is now being processed</MudText>
                 }
             </div>
 
