--- a/Energy.App.Standalone/Features/Setup/SetupPage.razor
+++ b/Energy.App.Standalone/Features/Setup/SetupPage.razor
@@ -23,6 +23,8 @@
                        title="Wipe all data?">
                 Wipe All Data
             </MudButton>
+            <DocTooltipIcon DocSnippetHeader="Wipe All Data" DocSnippet="DocSnippet.ManualActionsWipeAllData" IconTitle="Help for Wiping All User Data" />
+
         </div>
     </MudItem>
     <MudItem xs="12">
