--- a/Energy.App.Standalone/Pages/Index.razor
+++ b/Energy.App.Standalone/Pages/Index.razor
@@ -25,6 +25,7 @@
                                Variant="Variant.Filled"
                                Color="Color.Info"
                                StartIcon="@Icons.Material.Filled.AutoFixHigh">Setup Wizard</MudButton>
+                <DocTooltipIcon OptionalRootClass="align-self-center" DocSnippetHeader="Setup Wizard" DocSnippet="DocSnippet.SetupWizard" IconTitle="Using the Setup Wizard" />
 
 
                 </MudPaper>
