--- a/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
+++ b/Energy.App.Standalone/Features/Setup/Weather/Pages/WeatherDataInfo.razor
@@ -4,12 +4,17 @@
 @inject IDispatcher Dispatcher
 
 <div class="d-flex justify-space-between align-baseline">
-    <MudPaper Class="d-flex ma-3" Elevation="0">
+    <MudPaper Class="d-flex ma-3 align-center" Elevation="0">
         <MudText Typo="Typo.h5" Class=" fw-bolder">Weather Data Status</MudText>
+        <DocTooltipIcon DocSnippetHeader="Weather Data Status"
+                        DocSnippet="DocSnippet.WeatherDataStatus" IconTitle="Help for Weather Data Status" />
+
     </MudPaper>
+    
     <MudPaper Class="d-flex ma-3" Elevation="0">
         <MudLink Href="https://open-meteo.com/" Target="_blank">Weather data by Open-Meteo.com <i class="fa">&#xf08e;</i></MudLink>
     </MudPaper>
+    
 </div>
 <MudTable Items="Enumerable.Range(0, 1)" T="int" Elevation="0">
     <HeaderContent>
@@ -73,7 +78,7 @@
 
             </MudTd>
             <MudTd DataLabel="View Weather Data">
-                <MudButton Href="/WeatherData" Color="Color.Secondary" Variant="Variant.Filled">View Data</MudButton>
+                <MudButton Href="/WeatherDataTable" Color="Color.Secondary" Variant="Variant.Filled">View Data</MudButton>
             </MudTd>
         }
     </RowTemplate>
